crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange

monochange discovers packages across Cargo, npm/pnpm/Bun, Deno, Dart/Flutter, Python, and Go, then coordinates version bumps, changelogs, and release automation from a single monochange.toml config.

[1m[97mUsage:[0m [93mmonochange[0m [95m[OPTIONS][0m [95m<COMMAND>[0m

[1m[96mBuilt-in Commands:[0m
  [93msnapshot[0m       Print a normalized JSON snapshot of the CLI surface
  [93minit[0m           Generate monochange.toml with detected packages, groups, and default CLI commands
  [93mpopulate[0m       Add any missing built-in CLI commands to monochange.toml so you can customize them
  [93mcommand[0m        Open an interactive dashboard for adding or editing config-defined CLI commands
  [93mskill[0m          Read or install the bundled monochange agent skill
  [93msubagents[0m      Generate repo-local monochange subagents and agent guidance files
  [93mchange[0m         Determine the release severity of repository changes
  [93mapi[0m            Inspect lower-level API diffs
  [93mchangeset[0m      Inspect and validate pending changeset intent
  [93manalyze[0m        Analyze semantic changes for one package across main, head, and optional release baselines
  [93mnotes[0m          Render one configured release-note output without modifying release files
  [93mmigrate[0m        Audit or migrate release metadata for monochange repositories
  [93mlint[0m           Inspect and scaffold manifest lint rules
  [93mversions[0m       List package and group versions or sync internal dependency constraints
  [93mpublish[0m        Publish packages and inspect registry publishing state
  [93mcreate[0m         Create a changeset file for one or more packages
  [93mdiscover[0m       Discover packages across supported ecosystems
  [93mconfig[0m         Render resolved monochange configuration and workspace metadata
  [93mpreview[0m        Preview planned version bumps, changelogs, and release artifacts without writing files
  [93mprepare[0m        Prepare version bumps, changelogs, and release artifacts
  [93maffected[0m       Evaluate affected packages and changeset coverage
  [93mdiagnose[0m       Inspect changeset provenance and review metadata
  [93mnext[0m           Show the next version for each release group and package without writing files
  [93mnext-versions[0m  Show the next version for each release group and package without writing files
  [93mmcp[0m            Start the monochange MCP (Model Context Protocol) server over stdin/stdout
  [93mcheck[0m          Validate configuration, changesets, and run manifest lint rules
  [93mhelp[0m           Show detailed help for a command
  [93mstep[0m           Run built-in release workflow steps
  [93mrun[0m            Run workflow commands defined in monochange.toml

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help (see a summary with '-h')

  [93m-V[0m, [93m--version[0m
          Print version

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree

Quick Start

1. Create or update monochange.toml for your workspace:

  monochange init

2. Validate configuration and changeset targets before making release changes:

  monochange step validate

3. Inspect detected package ids and groups when authoring changesets or workflow inputs:

  monochange step discover --format json

4. Check what the next version will be before preparing a release. This reads pending changesets and writes nothing:

  monochange next
  monochange next --format json

5. Use repository-defined workflows through monochange run <command> when they exist in your config, or call immutable built-in steps directly with monochange step <name>.

6. Preview before mutating files, publishing packages, creating tags, or opening release requests:

  monochange run release --dry-run --diff
  monochange step prepare-release --dry-run --diff

Run monochange help <command> or monochange help step <name> for command-specific options.
