crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange_analyze.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange analyze

Analyze semantic changes for one package across main, head, and optional release baselines

[1m[97mUsage:[0m [93mmonochange analyze[0m [95m[OPTIONS][0m [93m--package[0m[95m [0m[95m<PACKAGE>[0m

[1m[96mOptions:[0m
      [93m--package[0m[95m [0m[95m<PACKAGE>[0m
          Configured package id, discovered package id, package name, manifest path, or package directory

      [93m--release-ref[0m[95m [0m[95m<REF>[0m
          Explicit release baseline ref. Defaults to the latest tag for the package or owning version group

      [93m--main-ref[0m[95m [0m[95m<REF>[0m
          Base branch or ref to compare against. Defaults to the detected default branch

      [93m--head-ref[0m[95m [0m[95m<REF>[0m
          Head ref to analyze. Defaults to HEAD

      [93m--detection-level[0m[95m [0m[95m<detection-level>[0m
          Level of semantic detail to request from analyzers

          [default: signature]
          [possible values: basic, signature, semantic]

      [93m--format[0m[95m [0m[95m<format>[0m
          Output format

          [default: text]
          [possible values: text, json, json-min, markdown, md]

  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

  [93m-v[0m, [93m--verbose[0m
          Show full result lists and logs, every step timing, and progress notes

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree

Examples:
  monochange analyze --package core
  monochange analyze --package core --format json
  monochange analyze --package core --release-ref core/v1.2.3
  monochange analyze --package core --main-ref main --head-ref HEAD

Analysis notes:
  - Runs package-scoped semantic analysis using the selected package's configured release identity.
  - Defaults `--release-ref` to the newest tag for the package or the version group that owns it.
  - If no prior release tag exists, falls back to first-release analysis using only `main -> head`.
